--- a/DesarrolloSocialWeb/Views/Home/Index.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/Index.cshtml
@@ -1,8 +1,52 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/scriptsSite/jsHome/jsIndex.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div class="card" style="margin-top:5%;">
+    <div class="card-body">
+        <div class="form-horizontal" style="color:dimgray">
+            <h1 style="color:dimgray"> Acceso </h1>
+            <small class="mb-md-0 text-gray">Hola Comenzemos</small>
+            <div class="form-group row">
+                <div class="col-md-3 text-md-right">
+                    <label class="control-label">Nombre de usuario</label>
+                </div>
+                <div class="col-md-8">
+                    <input type="text" id="userMail" name="userMail" class="form form-control" />
+                </div>
+                <div class="col-md-3 text-md-right">
+                    <label class="control-label">Password</label>
+                </div>
+                <div class="col-md-8">
+                    <input type="password" id="password" name="password" class="form form-control" />
+                </div>
+
+                <div class="col-md-3 text-md-right">
+                    <input type="checkbox" id="confirmar" class="" form-check-input> <br>
+                </div>
+                <div class="col-md-2">
+                    <label class="control-label">Confirmar</label>
+                </div>
+
+            </div>
+            <div class="form-group row">
+                <div class="col-md-3 text-md-right">
+                    <label class="control-label">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                </div>
+                <div class="col-md-8">
+                    <input type="button" value="Aceptar" class="btn btn-success form-control" onclick="Login();" />
+                </div>
+                <div class="col-md-6 text-md-right" style="display:none;">
+                    <input type="reset" value="Cancelar" class="btn btn-danger form-control" onclick="Reset()" style="width:200px;" />
+                </div>
+            </div>
+
+        </div>
+    </div>
 </div>
+
