--- a/DesarrolloSocialWeb/Views/Home/CargaFamiliar.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/CargaFamiliar.cshtml
@@ -80,16 +80,15 @@
              </div>
 
 <br />
-             <div class="col-md-8 text-md-center">
-                 <div class="col-md-8">
-                   <label class="control-label" style="font-weight:bold;font-size:16px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Familia</label>
-                </div>
+             
+
+          <div class="container text-md-center">
+
+              <div class="col-md-12">
+                           <h1>Familia</h1>
              </div> 
                  
-          <br />
-
-          <div class="container">
-
+            <br />
 
               <table id="cargaFamiliar" class="table table-light">
                   <thead>
@@ -101,26 +100,28 @@
                           <th>Estudia</th>
                           <th>Trabaja</th>
                           <th>Ingreso </th>
-                          <th>Actividades</th>
+                          <th>Deportes</th>
+                          <th>Cultura</th>
                           <th>Embarazos</th>
-                          <th>Enfermedad/Discapacidad</th>
+                          <th>Enfermedad/<br />Discapacidad</th>
                           <th>Tratamiento</th>
                       </tr>
                   </thead>
 
                   <tbody>
                       <tr>
-                          <td style="color:black;font-weight:bold;font-size:16px;">Jefe de Familia</td>
+                          <td style="color:black;font-weight:bold;font-size:16px;">Jefe&nbsp;de&nbsp;Familia</td>
                           <td><input type="number" id="edad1" step="1" min="1" max="100"/></td>
                           <td><input type="number"  id="cantidad1" step="1" min="1" max="100"/></td>
                           <td><select id="documento1"><option value="0" selected disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                           <td><select id="estudia1"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                           <td><select id="trabaja1"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                           <td><input type="number" id="ingreso1" step="5" min="1" max="100"/></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
+                          <td><select id="deporte1"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="cultura1"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="embarazo1"><option value="0" selected disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="enfermedad1"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="tratamiento1"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                       </tr>
                         <tr>
                           <td style="color:black;font-weight:bold;font-size:16px;">Niños</td>
@@ -130,10 +131,11 @@
                           <td><select id="estudia2"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                           <td><select id="trabaja2"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                           <td><input type="number" id="ingreso2" step="5" min="1" max="100"/></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
+                          <td><select id="deporte2"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="cultura2"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="embarazo2"><option value="0" selected disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="enfermedad2"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="tratamiento2"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                       </tr>
                         <tr>
                           <td style="color:black;font-weight:bold;font-size:16px;">Adolecentes</td>
@@ -143,10 +145,11 @@
                           <td><select id="estudia3"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                           <td><select id="trabaja3"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                           <td><input type="number" id="ingreso3" step="5" min="1" max="100"/></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
+                          <td><select id="deporte3"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="cultura3"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="embarazo3"><option value="0" selected disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="enfermedad3"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="tratamiento3"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                       </tr>
                         <tr>
                           <td style="color:black;font-weight:bold;font-size:16px;">Adultos</td>
@@ -156,23 +159,25 @@
                           <td><select id="estudia4"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                           <td><select id="trabaja4"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                           <td><input type="number" id="ingreso4" step="5" min="1" max="100"/></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
+                          <td><select id="deporte4"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="cultura4"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="embarazo4"><option value="0" selected disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="enfermedad4"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="tratamiento4"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                       </tr>
                         <tr>
-                          <td style="color:black;font-weight:bold;font-size:16px;">Adultos Mayores</td>
+                          <td style="color:black;font-weight:bold;font-size:16px;">Adultos&nbsp;Mayores</td>
                           <td><input type="number" id="edad5" step="1" min="1" max="100"/></td>
                           <td><input type="number"  id="cantidad5" step="1" min="1" max="100"/></td>
                           <td><select id="documento5"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                           <td><select id="estudia5"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                           <td><select id="trabaja5"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                           <td><input type="number" id="ingreso5" step="5" min="1" max="100"/></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td></td>
+                          <td><select id="deporte5"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="cultura5"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="embarazo5"><option value="0" selected disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="enfermedad5"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="tratamiento5"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                       </tr>
                   </tbody>
 
