--- a/DesarrolloSocialWeb/Views/Home/CorredorHumanitario.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/CorredorHumanitario.cshtml
@@ -12,6 +12,66 @@
    </div>
        </div>
 
+           <div class="col-md-3 text-md-right">
+                    <label class="control-label">País de Origen</label>
+                 </div>
+                <div class="col-md-8">
+                    <input type="text" id="paísorigen" name="paísorigen" class="form form-control" />
+                </div>
+
+                <div class="col-md-3 text-md-right">
+                    <label class="control-label">¿Expresa Voluntad de Regresar a su País Origen?</label>
+                 </div>
+                <div class="col-md-8">
+                    <input type="text" id="regresarpaisorigen" name="regresarpaisorigen" class="form form-control" />
+                </div>
+
+                 <div class="col-md-3 text-md-right">
+                    <label class="control-label">¿Posee Vivienda En El País de Origen?</label>
+                 </div>
+                <div class="col-md-8">
+                    <input type="text" id="viviendapaísorigen" name="viviendapaísorigen" class="form form-control" />
+                </div>
+
+                <div class="col-md-3 text-md-right">
+                    <label class="control-label">¿Tiene un Lugar de Arrivo?</label>
+                 </div>
+                <div class="col-md-8">
+                    <input type="text" id="direcciondearrivo" name="direcciondearrivo" class="form form-control" />
+                </div>
+
+                <div class="col-md-3 text-md-right">
+                    <label class="control-label">Direccion de Arrivo</label>
+                 </div>
+
+                    <div class="col-md-3 text-md-right">
+                    <label class="control-label">Pais</label>
+                </div>
+                  <div class="col-md-8">
+                    <select id="pais" name="pais" class="form-control form-control-sm" required> 
+                    </select>
+                </div>
+
+                 <div class="col-md-3 text-md-right">
+                    <label class="control-label">Estado/Departamento</label>
+                </div>
+                  <div class="col-md-8">
+                    <input type="text" id="estado" name="estado" class="form form-control" />
+                </div>
+
+                <div class="col-md-3 text-md-right">
+                    <label class="control-label">Ciudad</label>
+                </div>
+                  <div class="col-md-8">
+                    <input type="text" id="ciudad" name="ciudad" class="form form-control" />
+                </div>
+
+
+
+
+
+
+
        <div class="col-md-3 text-md-right">
                     <label class="control-label">Urbanización/Barrio/Sector/Conjunto</label>
       </div>
