--- a/DesarrolloSocialWeb/Views/Home/CargaFamiliar.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/CargaFamiliar.cshtml
@@ -111,17 +111,17 @@
                   <tbody>
                       <tr>
                           <td style="color:black;font-weight:bold;font-size:16px;">Jefe&nbsp;de&nbsp;Familia</td>
-                          <td><input type="number" id="edad1" step="1" min="1" max="100"/></td>
-                          <td><input type="number"  id="cantidad1" step="1" min="1" max="100"/></td>
-                          <td><select id="documento1"><option value="0" selected disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
-                          <td><select id="estudia1"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
-                          <td><select id="trabaja1"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
-                          <td><input type="number" id="ingreso1" step="5" min="1" max="100"/></td>
-                          <td><select id="deporte1"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
-                          <td><select id="cultura1"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
-                          <td><select id="embarazo1"><option value="0" selected disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
-                          <td><select id="enfermedad1"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
-                          <td><select id="tratamiento1"><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><input type="number" id="edad1" step="1" min="1" max="100"disabled/></td>
+                          <td><input type="number" disabled id="cantidad1" step="1" min="1" max="100"/></td>
+                          <td><select id="documento1"disabled><option value="0" selected disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="estudia1"disabled><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="trabaja1"disabled><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><input type="number"disabled id="ingreso1" step="5" min="1" max="100"/></td>
+                          <td><select id="deporte1"disabled><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="cultura1"disabled><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="embarazo1"disabled><option value="0" selected disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="enfermedad1"disabled><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
+                          <td><select id="tratamiento1"disabled><option value="0" selected  disabled>Seleccionar</option><option value="1">Si</option><option value="2">No</option></select></td>
                       </tr>
                         <tr>
                           <td style="color:black;font-weight:bold;font-size:16px;">Niños</td>
