--- a/DesarrolloSocialWeb/Views/Home/Registro.cshtml
+++ b/DesarrolloSocialWeb/Views/Home/Registro.cshtml
@@ -22,11 +22,17 @@
                     <input type="date" id="fechaRegistro" name="fechaRegistro" class="form form-control" />
                 </div>
 
+                
                 <div class="col-md-3 text-md-right">
-                    <label class="control-label">Pais</label>
+                    <label class="control-label" style=";font-weight:bold;font-size:16px;">Dirección de Adomicilio</label>
+                </div>
+
+
+                <div class="col-md-3 text-md-right">
+                    <label class="control-label">País</label>
                 </div>
                   <div class="col-md-8">
-                    <select id="pais" name="pais" class="form-control form-control-sm" required> 
+                    <select id="país" name="país" class="form-control form-control-sm" required> 
                     </select>
                 </div>
 
@@ -97,7 +103,7 @@
                 </div>
 
                  <div class="col-md-3 text-md-right">
-                    <label class="control-label">Apartamento N°</label>
+                    <label class="control-label">N°Apartamento/N°Casa</label>
                 </div>
                   <div class="col-md-8">
                     <input type="text" id="apartamentoN" name="apartamentoN" class="form form-control" />
@@ -113,22 +119,44 @@
                  <div class="col-md-3 text-md-right">
                     <label class="control-label">Telefono</label>
                 </div>
-                  <div class="col-md-8">
+
+                 <div class="form-group row col-md-12">
+
+        <div class="col-md-1 text-md-left">
+                    <input type="text" id="codigo" name="codigo" class="form form-control" placeholder="+58" />
+                </div>
+
+               <div class="col-md-7 text-md-right">
                     <input type="text" id="telefono" name="telefono" class="form form-control" />
                 </div>
+
+
+             </div>
+                 
 
                 <div class="col-md-3 text-md-right">
                     <label class="control-label">Telefono Alternativo</label>
                 </div>
-                  <div class="col-md-8">
+
+                <div class="form-group row col-md-12">
+
+
+                  <div class="col-md-1 text-md-left">
+                    <input type="text" id="telefono.alternativo" name="telefono.alternativo" class="form form-control" placeholder="+58"  />
+                </div>
+
+                 <div class="col-md-7 text-md-right">
                     <input type="text" id="telefono.alternativo" name="telefono.alternativo" class="form form-control" />
                 </div>
+
+                 </div>
+
 
                 <div class="col-md-3 text-md-right">
                     <label class="control-label">Correo Electronico</label>
                 </div>
                   <div class="col-md-8">
-                    <input type="text" id="correo" name="correo" class="form form-control" />
+                    <input type="email" id="correo" name="correo" class="form form-control" />
                 </div>
 
 
